--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ keep_files:
 
 
 # Site settings
-title: opsforce
+title: opsforce.
 subtitle: "Do not tell me, it can't be done!"
 url: "http://opsforce.github.io" # the base hostname & protocol for your site
 # baseurl: "/the/subpath/of/your/site" # Set this value to "" if you want your site to be root
