--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: whiteglass theme
 author: Yous
 description: Minimal, responsive Jekyll theme for hackers.
-baseurl: "/blog" # the subpath of your site, e.g. /blog
+#baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "https://opsforce.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 lang: en
 timezone: UTC
