--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@
 # you will see them accessed via {{ site.title }}, {{ site.author }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: whiteglass theme
-author: Yous
+title: opsforce
+author: Jimmy Chao
 description: Minimal, responsive Jekyll theme for hackers.
 #baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "https://opsforce.github.io" # the base hostname & protocol for your site, e.g. http://example.com
