--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ twitter_username:
 twitter_image:
 facebook_app_id:
 facebook_image:
-google_analytics:
+google_analytics: UA-90629160-1
 comments: true
 
 # Plugins
